---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 717
expression: "\npub record Thing {\n  Thing(then: Nil)\n}\n\npub fn main() {\n  let a = Thing(then: Nil)\n  let b = Thing(..a, then: Nil)\n  b.then\n}\n"
---
----- SOURCE CODE

pub record Thing {
  Thing(then: Nil)
}

pub fn main() {
  let a = Thing(then: Nil)
  let b = Thing(..a, then: Nil)
  b.then
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

export class Thing extends $CustomType {
  constructor(then$) {
    super();
    this.then$ = then$;
  }
}

export function main() {
  let a = new Thing(undefined);
  let b = a.withFields({ then$: undefined });
  return b.then$;
}
